# SDL_Desktop_Pet

./: .clangd  .gitignore  CMakeLists.txt  README.md  project.json
res/textures/: source.md
src/: Animation.cpp  Animation.h  Animation.hpp  Pet.cpp  Pet.h  Pet.hpp  PetEnum.hpp  Texture.cpp  Texture.h  asset.hpp.in  ecs_pet.cpp  ecs_pet.h  main.cpp  pet_src_mgr.h  precomp.h
